--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-12 16:30-0300\n"
+"POT-Creation-Date: 2023-08-20 10:33-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,15 +59,22 @@ msgid "Technical"
 msgstr "Técnico"
 
 #: core/models.py:113
-#, fuzzy
-msgid "Graduation"
-msgstr "Graduação"
+msgid "Bachelor"
+msgstr "Bacharelado"
 
 #: core/models.py:114
-msgid "Postgraduate"
-msgstr "Pós Graduação"
+msgid "Specialization"
+msgstr "Especialização"
 
 #: core/models.py:115
+msgid "Master"
+msgstr "Mestrado"
+
+#: core/models.py:116
+msgid "PhD"
+msgstr "Doutorado"
+
+#: core/models.py:117
 msgid "Doctorate"
 msgstr "Doutorado"
 
@@ -166,6 +173,13 @@ msgstr "Claro"
 #: portfolio/settings/base.py:150
 msgid "Default"
 msgstr "Padrão"
+
+#, fuzzy
+#~ msgid "Graduation"
+#~ msgstr "Graduação"
+
+#~ msgid "Postgraduate"
+#~ msgstr "Pós Graduação"
 
 #~ msgid "Portuguese"
 #~ msgstr "Português"
